--- a/index.html
+++ b/index.html
@@ -35,11 +35,22 @@
               </li>
             </ul>
             
-            <ul class="contact">
-              <li class="item-tel"><a class="tel" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-              <li class="item-tel"><a class="tel" href="tel:+380961111111">+38 096 111 11 11</a>
+           
+            <ul class="communication">
+              <li><a href="mailto:info@devstudio.com" class="main-mail">
+                      <svg class="icon" width="16px" height="12px">
+                          <use xlink:href="./img/sprite.svg.svg#icon-envelope">
+                          </use>
+                      </svg>info@devstudio.com</a>
               </li>
-            </ul>
+              <li><a href="tel:+380961111111" class="main-tel">
+                      <svg class="icon" width="10" height="16">
+                          <use xlink:href="../img/sprite.svg.svg#icon-Vector">
+                          </use>
+                      </svg>
+                      +38 096 111 11 11
+                  </a></li>
+          </ul>
         </nav>
         </div>
       </header>
