--- a/index.html
+++ b/index.html
@@ -123,14 +123,6 @@
         </div>
       </section>     
   
-
-
-
-
-
-
-
-
     <!---чем ми занимаемся-->
     <section class="about-hero">
       <div class="container">
@@ -192,7 +184,7 @@
                 <li class="networks">
                  <a href="" class="social-networks">
                    <svg class="social-networks-svg">
-                     <use href="./img/sprite.svg.svg#icon-instagram"></use>
+                     <use href="./img/sprite.svg#icon-instagram"></use>
                    </svg>
                  </a>
                 </li>
@@ -200,7 +192,7 @@
                   <li class="networks">
                    <a href="" class="social-networks">
                      <svg class="social-networks-svg">
-                       <use href="./img/sprite.svg.svg#icon-twitter"></use>
+                       <use href="./img/sprite.svg#icon-twitter"></use>
                      </svg>
                    </a>
                   </li>
@@ -209,7 +201,7 @@
                     <li class="networks">
                      <a href="" class="social-networks">
                        <svg class="social-networks-svg">
-                         <use href="./img/sprite.svg.svg#icon-facebook"></use>
+                         <use href="./img/sprite.svg#icon-facebook"></use>
                        </svg>
                      </a>
                     </li>
@@ -218,7 +210,7 @@
                       <li class="networks">
                        <a href="" class="social-networks">
                          <svg class="social-networks-svg">
-                           <use href="./img/sprite.svg.svg#icon-linkedin"></use>
+                           <use href="./img/sprite.svg#icon-linkedin"></use>
                          </svg>
                        </a>
                       </li>
@@ -363,7 +355,7 @@
                       <li class="networks">
                        <a href="" class="social-networks">
                          <svg class="social-networks-svg">
-                           <use href="./img/sprite.svgicon-linkedin"></use>
+                           <use href="./img/sprite.svg#icon-linkedin"></use>
                          </svg>
                        </a>
                       </li>
