--- a/index.html
+++ b/index.html
@@ -216,9 +216,6 @@
                       </li>
               </ul>
 
-
-
-
             <li class="comand-links-item">
               <img
                 class="comand-list-img"
@@ -362,6 +359,7 @@
               </ul>
 
             </li>
+            </li>
           </ul>
         </div> 
       </div>
@@ -372,11 +370,10 @@
         <h2 class="clients-title">Постоянные клиенты</h2>
         <ul class="clients-icon">
 
-      
           <li class="clients-icon-logo">
             <div class="icon-svg">
             <svg class="logo-svg" width="44px" height="50px">
-            <use href="./img/sprite.svg#icon-logo1"  ></use>
+            <use href="./img/sprite.svg#icon-logo1"></use>
            </svg>
             </div>
           </li>
@@ -385,7 +382,7 @@
           <li class="clients-icon-logo">
             <div class="icon-svg">
             <svg  width="40px" height="52px">
-            <use href="./img/sprite.svg#icon-logo2"  ></use>
+            <use href="./img/sprite.svg#icon-logo2"></use>
            </svg>
           </div>
         </li>
@@ -404,7 +401,7 @@
           <li class="clients-icon-logo">
             <div class="icon-svg">
             <svg width="80px" height="42px">
-            <use href="./img/sprite.svg#icon-logo4"  ></use>
+            <use href="./img/sprite.svg#icon-logo4"></use>
            </svg>
           </div>
         </li>
@@ -414,7 +411,7 @@
           <li class="clients-icon-logo">
             <div class="icon-svg">
             <svg width="59px" height="47px">
-            <use href="./img/sprite.svg#icon-logo5"  ></use>
+            <use href="./img/sprite.svg#icon-logo5"></use>
            </svg>
             </div>
           </li>
@@ -424,11 +421,33 @@
           <li class="clients-icon-logo">
             <div class="icon-svg">
             <svg width="88px" height="45px">
-            <use href="./img/sprite.svg#icon-logo6"  ></use>
+            <use href="./img/sprite.svg#icon-logo6"></use>
            </svg>
           </div>
         </li>
         </ul>
+
+
+
+
+
+
+
+
+
+
+        <ul class="customers__list">
+          <li><a href="#">
+                  <svg class="customers__list__icon-clients" width="45" height="50">
+                      <use xlink:href="./images/sprite.svg#logo_1">
+                      </use>
+                  </svg>
+              </a>
+          </li>
+          
+      </ul>
+
+
         </div>
       </section>
 
