--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 
           <ul class="navigation-list list">
             <li>
-              <a class="navigation-list-link link current" href="./index.html">Студия</a>
+              <a class="navigation-list-link link " href="./index.html">Студия</a>
             </li>
             <li >
               <a class="navigation-list-link link current" href="./portfolio.html">Портфолио</a>
