--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="navigation-list-link link current" href="./index.html">Студия</a>
               </li>
               <li >
-                <a class="navigation-list-link link current" href="./portfolio.html">Портфолио</a>
+                <a class="navigation-list-link link " href="./portfolio.html" >Портфолио</a>
               </li>
               <li >
                 <a class="navigation-list-link link" href="">Контакты</a>
