--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
       <section class="about">
          <div class="container">
         <h1 class="about-title">ЭФФEКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <button class="modal-btn" type="button">Заказать услугу</button>
+        <button class="modal-btn" type="button" data-modal-open>Заказать услугу</button>
+        <div class="backdrop is-hiddem" data-modal>
+          <div class="modal">
+            <button data-modal-close>Закрыть</button>
+          </div>
+        </div>
        </div>
       </section>
    
@@ -495,5 +500,6 @@
       </section>
     
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
