--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
            
             <ul class="communication">
               
-              <li><a href="mailto:info@devstudio.com" class="main-mail">
+              <li>
+                <a href="mailto:info@devstudio.com" class="main-mail">
                       <svg class="communication-icon" width="16px" height="12px">
                           <use xlink:href="./img/sprite.svg#icon-envelope">
                           </use>
