--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   
             <ul class="navigation-list list">
               <li>
-                <a class="navigation-list-link link current" href="./index.html">Студия</a>
+                <a class="navigation-list-link  current" href="./index.html">Студия</a>
               </li>
               <li >
-                <a class="navigation-list-link link " href="./portfolio.html" >Портфолио</a>
+                <a class="navigation-list-link  " href="./portfolio.html" >Портфолио</a>
               </li>
               <li >
-                <a class="navigation-list-link link" href="">Контакты</a>
+                <a class="navigation-list-link " href="">Контакты</a>
               </li>
             </ul>
             
