--- a/portfolio.html
+++ b/portfolio.html
@@ -23,13 +23,13 @@
 
           <ul class="navigation-list list">
             <li>
-              <a class="navigation-list-link link " href="./index.html">Студия</a>
+              <a class="navigation-list-link  " href="./index.html">Студия</a>
             </li>
             <li >
-              <a class="navigation-list-link link current" href="./portfolio.html">Портфолио</a>
+              <a class="navigation-list-link  current" href="./portfolio.html">Портфолио</a>
             </li>
             <li >
-              <a class="navigation-list-link link" href="">Контакты</a>
+              <a class="navigation-list-link " href="">Контакты</a>
             </li>
           </ul>
           
